--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: Atoms
 Type: Package
-Title: Manipulate Atomic Systems
+Title: A R package to manipulate atomic systems
 Version: 1.0
-Date: 2017-08-02
-Author: Julien Idé, Jérémie Knoops
-Maintainer: Julien Idé <julien.ide.fr@gmail.com>
-Description: Read/Write topology/trajectory files.
+Date: 2018-03-01
+Author@R: c(
+    person("Julien", "Idé", email = "julien.ide.fr@gmail.com", role = c("aut", "cre")),
+    person("Jérémie", "Knoops", email = "jeremie.knoops@gmail.com", role = "aut"))
+Description: This package is intended to help people working with molecular modeling and quantum chemistry. 
+    It can read files  with the following formats: XYZ, PDB (ENT), RES, DCD, NC (NETCDF, NCDF) and LAMMPS. It also writes XYZ, PDB and LAMMPS files.
+    Various analysis can be performed on the atomic systems.
+URL: https://github.com/julienide/Atoms
+BugReports: https://github.com/julienide/Atoms/issues
 License: GPL (>= 2)
 SystemRequirements: C++11
 Imports:
