--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(.DollarNames,Atoms)
 S3method(angles,Atoms)
 S3method(bonds,Atoms)
 S3method(com,Atoms)
+S3method(conc,Atoms)
 S3method(dihedrals,Atoms)
 S3method(fractional,Atoms)
 S3method(freeVolume,Atoms)
@@ -79,6 +80,7 @@ export(cell2mat)
 export(cellDensity)
 export(cellVolume)
 export(com)
+export(conc)
 export(current)
 export(dihedrals)
 export(fractional)
