--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method("topology<-",Atoms)
 S3method(.DollarNames,Atoms)
 S3method(angles,Atoms)
 S3method(bonds,Atoms)
+S3method(cartesian,Atoms)
 S3method(com,Atoms)
 S3method(conc,Atoms)
 S3method(dihedrals,Atoms)
@@ -75,6 +76,7 @@ export(NCHeader)
 export(angles)
 export(areColors)
 export(bonds)
+export(cartesian)
 export(cell)
 export(cell2mat)
 export(cellDensity)
